# stellar_stream_density_ml_paper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Snakefile  environment.yml  pyproject.toml  showyourwork.yml  zenodo.yml
notebooks/: control_regions_normalization.nb
src/scripts/: __init__.py  helper.py  mpl_colormaps.py  paper.mplstyle  paths.py  pgm.py  syw.py
src/scripts/brutus/: download_mist_file.py  download_nn_file.py
src/scripts/dustmaps/: download_dustmaps.py  ps1_corrections.py
src/scripts/gd1/: datasets.py  datasets_fullset.py  datasets_subset.py  define_model.py  flow_diagnostics.ipynb  frames.py  model.py
src/scripts/gd1/data/: 1-query_data.py  2-combine_data.py  2.5-variable_ndata.py  3-phot_edges.py  3-pm_edges.py  3.1-pm_edges.py  3.2-phot_edges.py  3.3-masks.py  4-masks.py  test.ipynb
src/scripts/gd1/model/: 0-control_points_distance.py  0-control_points_spur.py  0-control_points_stream.py  0-distance_control_points.py  0-info.py  0-magnitude_control_points.py  0-spur_control_points.py  0-stream_control_points.py  1-control_points_stream.py  1-info.py  2-train_background_parallax_flow.py  2-train_background_photometry_flow.py  2-train_flow.py  3-train_model.py  4-likelihoods.py  5-variable_nspur.py  5-variable_nstream.py  data.py  define_model.py  helper.py
src/scripts/gd1/models/: 0-info.py  1-control_points_spur.py  1-train_background_astrometric_flow.py  2-train_background_photometry_flow.py  3-control_points_distance.py  3-control_points_spur.py  3-control_points_stream.py  4-train_model.py  5-likelihoods.py  6-variable_nspur.py  6-variable_nstream.py  (+5 more)
src/scripts/mock/: define_model.py  model.py
src/scripts/mock2/: model.py
src/scripts/pal5/: datasets.py  define_model.py  frames.py  model.py
src/scripts/pgm/: pgm.py
src/static/: .gitignore
src/static/mock/: flow_model.pt  model.pt
src/tex/: bib.bib  ms.tex
src/tex/output/: .gitignore
(+111 files in other folders)
